<resources>
    <string name="app_name">CryptoApp</string>

    <string name="serverError">Server hatası</string>
    <string name="networkError">Newtork hatası</string>
    <string name="error">Beklenmedik bir hata oluştu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Arama</string>
    <string name="appHeader">CryptoApp</string>
    <string name="usernameHint">Kullanıcı Adı</string>
    <string name="passwordHint">Şifre</string>
    <string name="rePasswordHint">Şifre Tekrar</string>
    <string name="logInText">Giriş Yap</string>
    <string name="signInText">Kayıt Ol</string>
    <string name="rePasswordText">Şifre Tekrar</string>
    <string name="passwordDontMatch">Şifreler eşleşmiyor</string>
    <string name="logInSuccess">Giriş başarılı</string>
    <string name="signInSuccess">Kayıt Başarılı</string>
    <string name="emptyArea">Lütfen tüm alanları doldurun</string>
    <string name="start">Başla</string>
    <string name="refrestTimer">Refresh Timer(SEC)</string>
</resources>