<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBg"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.cryptoApp.components.CustomTopContent
        android:id="@+id/contentTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/contentTop"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usernameHint"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/etBgLogin"
                android:fontFamily="@font/averta_regular" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/contentTop"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:hint="@string/passwordHint"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:backgroundTint="@color/etBgLogin"
                android:fontFamily="@font/averta_regular" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/layEditText"
   >

        <TextView
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_btn"
            android:fontFamily="@font/averta_regular"
            android:gravity="center"
            android:text="@string/logInText"
            android:paddingVertical="@dimen/_9sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/add_btn"
            android:fontFamily="@font/averta_regular"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/signInText"
            android:paddingVertical="@dimen/_9sdp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            />




    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>